--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,46 @@
+# Python
 __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
 *.pyc
-*.pytest_cache/
+.pytest_cache/
+*.egg-info/
+*.egg
+
+# Virtual environments
 .venv/
 venv/
+env/
+ENV/
+
+# Environment files
 .env
+.env.local
+
+# IDEs
 .DS_Store
 .vscode/
 .idea/
 *.iml
+*.swp
+*.swo
+*~
+
+# Build artifacts
 dist/
 build/
-*.egg-info/
+
+# Project-specific
 out/
 schema/my-schedule.json
+
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Coverage
+.coverage
+htmlcov/
+.tox/
