--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "family-schedulekit"
-version = "1.0.0"
+version = "1.1.0"
 description = "AI-friendly schema + utilities for co-parenting / custody schedules (ISO week based)."
 readme = "README.md"
 requires-python = ">=3.13"
@@ -14,7 +14,9 @@ keywords = ["custody", "co-parenting", "schedule", "iso8601", "calendar", "ai"]
 dependencies = [
   "pydantic>=2.7,<3.0",
   "Pillow>=10.3",
-  "argcomplete>=3.2"
+  "argcomplete>=3.2",
+  "webcolors>=24.6.0",
+  "pyyaml>=6.0",
 ]
 
 classifiers = [
@@ -72,6 +74,15 @@ warn_redundant_casts = true
 warn_unused_configs = true
 strict = false
 
+[[tool.mypy.overrides]]
+module = "webcolors"
+ignore_missing_imports = true
+
 [tool.pytest.ini_options]
 addopts = "-q"
 pythonpath = ["src"]
+
+[dependency-groups]
+dev = [
+    "types-pyyaml>=6.0.12.20250915",
+]
