--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "AI-friendly schema + utilities for co-parenting / custody schedul
 readme = "README.md"
 requires-python = ">=3.13"
 authors = [{ name = "Weekend Superhero LLC" }]
-license = { text = "MIT" }
+license = { text = "Dual License: PolyForm Noncommercial 1.0.0 OR Commercial License" }
 keywords = ["custody", "co-parenting", "schedule", "iso8601", "calendar", "ai"]
 dependencies = [
   "pydantic>=2.7,<3.0",
@@ -23,6 +23,7 @@ classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
+  "License :: Other/Proprietary License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.13",
