--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,89 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling>=1.25"]
 build-backend = "hatchling.build"
 
 [project]
 name = "family-schedulekit"
-version = "1.2.0"
+version = "1.3.0"
 description = "AI-friendly schema + utilities for co-parenting / custody schedules (ISO week based)."
 readme = "README.md"
 requires-python = ">=3.13"
-license = {text = "BSD-3-Clause"}
+authors = [{ name = "Weekend Superhero LLC" }]
+license = { text = "Dual License: PolyForm Noncommercial 1.0.0 OR Commercial License" }
+keywords = ["custody", "co-parenting", "schedule", "iso8601", "calendar", "ai"]
 dependencies = [
-    "argcomplete",
+  "pydantic>=2.7,<3.0",
+  "Pillow>=10.3",
+  "argcomplete>=3.2",
+  "webcolors>=24.6.0",
+  "pyyaml>=6.0",
 ]
 
-[project.optional-dependencies]
-dev = [
-    "pytest",
-    "mypy",
-    "ruff",
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "License :: Other/Proprietary License",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
+  "Topic :: Utilities",
+  "Typing :: Typed"
 ]
+
+[project.urls]
+Homepage = "https://github.com/weekendsuperhero/family-schedulekit"
+Repository = "https://github.com/weekendsuperhero/family-schedulekit"
+Issues = "https://github.com/weekendsuperhero/family-schedulekit/issues"
 
 [project.scripts]
 family-schedulekit = "family_schedulekit.cli:main"
 
-[project.urls]
-Homepage = "https://github.com/WeekendSuperhero/family-schedulekit"
-Repository = "https://github.com/WeekendSuperhero/family-schedulekit"
-"Bug Tracker" = "https://github.com/WeekendSuperhero/family-schedulekit/issues"
-
 [tool.hatch.build.targets.wheel]
 packages = ["src/family_schedulekit"]
+
+[tool.hatch.build]
+include = [
+  "README.md",
+  "LICENSE",
+  "schema/**",
+  "examples/**",
+  "src/**",
+  "tests/**",
+  "pyproject.toml"
+]
+
+[project.optional-dependencies]
+dev = [
+  "ruff>=0.5.0",
+  "pytest>=8.2",
+  "mypy>=1.10",
+  "build>=1.2.1"
+]
+
+[tool.ruff]
+line-length = 160
+target-version = "py314"
+lint.select = ["E", "F", "W", "I", "UP"]
+lint.ignore = ["E203"]
+
+[tool.mypy]
+python_version = "3.14"
+warn_unused_ignores = true
+warn_redundant_casts = true
+warn_unused_configs = true
+strict = false
+
+[[tool.mypy.overrides]]
+module = "webcolors"
+ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+addopts = "-q"
+pythonpath = ["src"]
+
+[dependency-groups]
+dev = [
+    "types-pyyaml>=6.0.12.20250915",
+]
