--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,4 +71,4 @@ jobs:
           path: dist/
 
       - name: Publish distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@59fb2850f5cc6520b805315579feca2ff96975b7
+        uses: pypa/gh-action-pypi-publish@v1.13.0
