--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,31 @@ build-backend = "hatchling.build"
 
 [project]
 name = "family-schedulekit"
-version = "1.3.1"
+version = "1.3.2"
 description = "AI-friendly schema + utilities for co-parenting / custody schedules (ISO week based)."
 readme = "README.md"
 requires-python = ">=3.13"
 authors = [{ name = "Weekend Superhero LLC" }]
 license = { text = "Dual License: PolyForm Noncommercial 1.0.0 OR Commercial License" }
-keywords = ["custody", "co-parenting", "schedule", "iso8601", "calendar", "ai"]
+keywords = [
+  "custody",
+  "co-parenting",
+  "schedule",
+  "iso8601",
+  "calendar",
+  "ai",
+  "parenting-time",
+  "family-law",
+  "divorce",
+  "shared-custody",
+  "parenting-plan",
+  "custody-schedule",
+  "visitation",
+  "child-custody",
+  "family-schedule",
+  "json-schema",
+  "pydantic"
+]
 dependencies = [
   "pydantic>=2.7,<3.0",
   "Pillow>=10.3",
@@ -20,16 +38,20 @@ dependencies = [
 ]
 
 classifiers = [
-  "Development Status :: 3 - Alpha",
+  "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: MIT License",
+  "Intended Audience :: End Users/Desktop",
+  "Intended Audience :: Legal Industry",
   "License :: Other/Proprietary License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: 3.14",
+  "Programming Language :: Python :: 3 :: Only",
+  "Topic :: Office/Business :: Scheduling",
   "Topic :: Utilities",
-  "Typing :: Typed"
+  "Typing :: Typed",
+  "Operating System :: OS Independent"
 ]
 
 [project.urls]
