--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "family-schedulekit"
-version = "1.3.2"
+version = "1.3.3"
 description = "AI-friendly schema + utilities for co-parenting / custody schedules (ISO week based)."
 readme = "README.md"
 requires-python = ">=3.13"
@@ -107,5 +107,6 @@ pythonpath = ["src"]
 
 [dependency-groups]
 dev = [
+    "pytest-cov>=7.0.0",
     "types-pyyaml>=6.0.12.20250915",
 ]
